--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -72,4 +74,9 @@ dependencies {
 
     //gson
     implementation 'com.google.code.gson:gson:2.6.2'
+
+    //room database
+    implementation 'android.arch.persistence.room:runtime:1.1.0'
+    kapt 'android.arch.persistence.room:compiler:1.1.0'
+
 }
