--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,8 @@ dependencies {
     implementation 'android.arch.persistence.room:runtime:1.1.0'
     kapt 'android.arch.persistence.room:compiler:1.1.0'
 
+    def lifecycle_version = "2.2.0-rc02"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+
 }
