--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'org.koin:koin-core:1.0.2'
     implementation 'org.koin:koin-android:1.0.2'
     implementation 'org.koin:koin-android-viewmodel:1.0.2'
+    implementation "org.koin:koin-android-architecture:0.9.1"
 
     // LiveData & ViewModel
     implementation "android.arch.core:runtime:1.1.1"
