--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
+    //Kointest
+    testImplementation 'org.koin:koin-test:0.9.3'
+    //Mock
+    testImplementation 'org.mockito:mockito-core:2.24.5'
+    androidTestImplementation 'org.mockito:mockito-android:2.24.5'
+
+    androidTestImplementation 'android.arch.core:core-testing:1.1.0'
+    testImplementation "android.arch.core:core-testing:1.1.0"
 }
