--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.innovat"
+        applicationId "com.example.infosys"
         minSdkVersion 15
         targetSdkVersion 29
         versionCode 1
