--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.innovat">
+    package="com.example.infosys">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".Network.MainApplication"
+        android:name="com.example.infosys.Network.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,8 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".View.MainActivity"></activity>
-        <activity android:name=".View.CallFragmentActivity">
+        <activity android:name="com.example.infosys.View.MainActivity"></activity>
+        <activity android:name="com.example.infosys.View.CallFragmentActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
