--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,19 @@ android {
         enabled = true
     }
 
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
+
 }
 
 dependencies {
+    def lifecycle_version = "2.2.0-rc02"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -39,57 +49,49 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-
-
     //cardView
     implementation 'androidx.cardview:cardview:1.0.0'
     //recyclerView
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-
     //glide
     implementation 'com.github.bumptech.glide:glide:4.2.0'
     //picasso
     implementation 'com.squareup.picasso:picasso:2.5.0'
-
-
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-
-
     //koin
     implementation 'org.koin:koin-core:1.0.2'
     implementation 'org.koin:koin-android:1.0.2'
     implementation 'org.koin:koin-android-viewmodel:1.0.2'
     implementation "org.koin:koin-android-architecture:0.9.1"
-
     // LiveData & ViewModel
     implementation "android.arch.core:runtime:1.1.1"
     implementation "android.arch.core:common:1.1.1"
-
     //rx
     implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     implementation 'com.squareup.okhttp3:okhttp:3.4.1'
-
     //gson
     implementation 'com.google.code.gson:gson:2.6.2'
-
     //room database
     implementation 'android.arch.persistence.room:runtime:1.1.0'
     kapt 'android.arch.persistence.room:compiler:1.1.0'
-
-    def lifecycle_version = "2.2.0-rc02"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
-
     //Kointest
     testImplementation 'org.koin:koin-test:0.9.3'
     //Mock
     testImplementation 'org.mockito:mockito-core:2.24.5'
     androidTestImplementation 'org.mockito:mockito-android:2.24.5'
-
     androidTestImplementation 'android.arch.core:core-testing:1.1.0'
     testImplementation "android.arch.core:core-testing:1.1.0"
+    androidTestImplementation 'androidx.test:rules:1.1.1'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    // To test fragments
+    debugImplementation 'androidx.fragment:fragment-testing:1.2.4'
+    //Roboelectric test
+    testImplementation "org.robolectric:robolectric:3.3.2"
+
 }
